[package]
name = "loony-cors"
version = "0.1.0"
authors = ["loony contributors <team@loony.rs>"]
description = "Cross-origin resource sharing (CORS) for loony applications."
readme = "README.md"
keywords = ["loony", "web"]
homepage = "https://loony.rs"
repository = "https://github.com/loony-rs/loony-extras.git"
documentation = "https://docs.rs/loony-cors/"
license = "MIT"
edition = "2018"

[lib]
name = "loony_cors"
path = "src/lib.rs"

[dependencies]
loony = { git="https://github.com/sankar-boro/loony" }

derive_more = "0.99.11"
futures = "0.3.13"
