[package]
name = "loony-identity"
version = "0.1.0"
authors = ["loony contributors <team@loony.rs>"]
description = "Identity service for loony web framework."
readme = "README.md"
keywords = ["http", "web", "async"]
homepage = "https://loony.rs"
repository = "https://github.com/loony-rs/loony-extras.git"
documentation = "https://docs.rs/loony-identity/"
license = "MIT"
edition = "2018"

[lib]
name = "loony_identity"
path = "src/lib.rs"

[features]
default = ["cookie-policy"]

cookie-policy = ["cookie/secure", "loony/cookie"]

[dependencies]
loony = { git="https://github.com/sankar-boro/loony" }

futures = "0.3.13"
serde = "1.0"
serde_json = "1.0"
derive_more = "0.99.11"
cookie = { version = "0.15", features = ["private"] }
time = { version = "0.2.5", default-features = false, features = ["std"] }
