[package]
name = "loony-multipart"
version = "0.1.0"
authors = ["loony contributors <team@loony.rs>"]
description = "Multipart support for loony web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "loony"]
homepage = "https://loony.rs"
repository = "https://github.com/loony-rs/loony-extras.git"
documentation = "https://docs.rs/loony-multipart/"
license = "MIT"
edition = "2021"

[lib]
name = "loony_multipart"
path = "src/lib.rs"

[dependencies]
loony = { git="https://github.com/sankar-boro/loony", features = ["http"] }

derive_more = "0.99.11"
httparse = "1.3"
futures = "0.3.13"
log = "0.4"
mime = "0.3"
twoway = "0.2"
