[package]
name = "loony-session"
version = "0.1.0"
authors = ["loony contributors <team@loony.rs>"]
description = "Session for loony web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://loony.rs"
repository = "https://github.com/loony-rs/loony-extras.git"
documentation = "https://docs.rs/loony-session/"
license = "MIT"
edition = "2018"

[lib]
name = "loony_session"
path = "src/lib.rs"

[features]
default = ["cookie-session"]

# sessions feature, session require "ring" crate and c compiler
cookie-session = ["cookie/secure", "loony/cookie"]

[dependencies]
loony = { git="https://github.com/sankar-boro/loony" }

cookie = "0.15"
derive_more = "0.99.11"
futures = "0.3.13"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.2.5", default-features = false, features = ["std"] }
